<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082">

        <EditText
            android:id="@+id/editTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorSecondary"
            android:ems="10"
            android:hint="@string/edit_task_hint"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorSecondary" />

        <EditText
            android:id="@+id/taskDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:backgroundTint="@color/colorSecondary"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/task_desc"
            android:inputType="textMultiLine"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorSecondary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/showTime"
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/text_time"
                android:textColor="@color/colorSecondary"
                android:textSize="30sp" />

            <Button
                android:id="@+id/pickTime"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="showTimePickerDialog"
                android:text="@string/pick_time"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/showDate"
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/date_text"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp" />

            <Button
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="showDatePickerDialog"
                android:text="@string/pick_date"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/priority"
                android:textAlignment="textEnd"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/priorities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/high"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:buttonTint="@android:color/white"
                    android:checked="false"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/radio_high"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

                <RadioButton
                    android:id="@+id/low"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:buttonTint="@android:color/white"
                    android:checked="false"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/radio_low"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="228dp"
        android:layout_height="102dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/addTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/save_task"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/taskList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/show_list"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>